overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -62,9 +62,14 @@ body {
   height: 560px;
   overflow: hidden;
   @media (--phablet) {
-    height: auto;
-    width: auto;
     overflow-y: scroll;
+  }
+}
+
+html, body, #root {
+  @media (--phablet) {
+    width: 100%;
+    height: 100%;
   }
 }
 
